Hoàn thiện login bằng google cho tất cả user

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+#Quan
 GOOGLE_CLIENT_ID=137302354891-s5t9p2kmkoog5rna8h3ei4696ru8uci7.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
