--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fileupload": "^0.2.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
