--- a/Mainsystem/package.json
+++ b/Mainsystem/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "bai01": "file:",
     "bai03": "file:",
     "bcrypt": "^5.1.1",
@@ -27,6 +28,7 @@
     "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
