--- a/Subsystem/package.json
+++ b/Subsystem/package.json
@@ -8,6 +8,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
     "pg-promise": "^11.10.2",
     "socket.io": "^4.8.1",
